fix: gaps correction

--- a/template/css/utility.css
+++ b/template/css/utility.css
@@ -15,6 +15,9 @@
 .gap-26 {
     gap: 26px;
 }
+.gap-40 {
+    gap: 40px;
+}
 
 /* Font Sizes */
 .fs-15 {
